--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,4 +13,22 @@ spring:
 logging:
   config: classpath:log4j2.xml
 
-# rabbitmq
+#mybatis
+mybatis-plus:
+  mapper-locations: classpath:/com/gao/*/mapper/*Mapper.xml
+  #实体扫描，多个package用逗号或者分号分隔
+  typeAliasesPackage: com.gao.entity
+  global-config:
+    #主键类型  0:"数据库ID自增", 1:"用户输入ID",2:"全局唯一ID (数字类型唯一ID)", 3:"全局唯一ID UUID";
+    id-type: 3
+    #字段策略 0:"忽略判断",1:"非 NULL 判断"),2:"非空判断"
+    field-strategy: 2
+    #驼峰下划线转换
+    db-column-underline: true
+    #数据库大写下划线转换
+    capital-mode: true
+    #刷新mapper 调试神器
+    refresh-mapper: true
+  configuration:
+    map-underscore-to-camel-case: true
+    cache-enabled: false
